Adding appropriate JVM args